// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders normally 1`] = `
"<div id=\\"id-scripts\\">
  <Head>
    <meta charSet=\\"utf-8\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\" />
    <meta name=\\"og:title\\" content=\\"Walcron Coorperation\\" />
    <meta name=\\"og:type\\" content=\\"profile\\" />
    <meta name=\\"og:site_name\\" content=\\"https://www.walcron.com/\\" />
    <meta property=\\"og:image:type\\" content=\\"image/png\\" />
    <meta property=\\"og:image:width\\" content=\\"400\\" />
    <meta property=\\"og:image:height\\" content=\\"400\\" />
    <meta name=\\"og:image\\" content=\\"https://www.walcron.com/og_image.png\\" />
    <meta name=\\"og:description\\" content=\\"Welcome to Walcron Coorperation, Malaysia; a site was built for IT research purposes.\\" />
    <meta name=\\"fb:admins\\" content=\\"walcoorperation@gmail.com\\" />
    <meta name=\\"description\\" content=\\"description\\" />
    <title>
      title
    </title>
    <link rel=\\"preload\\" as=\\"style\\" href=\\"/static/css/common.css\\" />
    <link rel=\\"preload\\" as=\\"style\\" href=\\"/static/css/font.css\\" />
    <link rel=\\"preload\\" as=\\"style\\" href=\\"https://use.fontawesome.com/releases/v5.5.0/css/all.css\\" />
    <link rel=\\"shortcut icon\\" type=\\"image/x-icon\\" href=\\"/favicon.ico\\" />
    <style>
      
                .webp body {
                  background-image: url(/static/img/bg/type1.webp);
                }
                .no-webp body {
                  background-image: url(/static/img/bg/type1.jpg);
                }
                body {
                  background: #000 none no-repeat left bottom;
                  background-size: contain;
                  color: #FFF;
                  position: relative;
                  padding: 0;
                  margin: 0;
                  min-height: 100vh;
                  width: 100%;
                  min-width: 320px;
                }
                div.mr-item {
                  width: 200px;
                  top: 50%;
                  left: 50%;
                  position: absolute;
                  transform: translate(-50%, -50%);
                }
                footer {
                  font-size: 0.8rem;
                  bottom: 0px;
                  left: 0px;
                  margin: 10px;
                  position: absolute;
                  width: 320px;
                }
              
    </style>
  </Head>
</div>"
`;

exports[`Header renders with nofontawesome normally 1`] = `
"<div id=\\"id-scripts\\">
  <Head>
    <meta charSet=\\"utf-8\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\" />
    <meta name=\\"og:title\\" content=\\"Walcron Coorperation\\" />
    <meta name=\\"og:type\\" content=\\"profile\\" />
    <meta name=\\"og:site_name\\" content=\\"https://www.walcron.com/\\" />
    <meta property=\\"og:image:type\\" content=\\"image/png\\" />
    <meta property=\\"og:image:width\\" content=\\"400\\" />
    <meta property=\\"og:image:height\\" content=\\"400\\" />
    <meta name=\\"og:image\\" content=\\"https://www.walcron.com/og_image.png\\" />
    <meta name=\\"og:description\\" content=\\"Welcome to Walcron Coorperation, Malaysia; a site was built for IT research purposes.\\" />
    <meta name=\\"fb:admins\\" content=\\"walcoorperation@gmail.com\\" />
    <meta name=\\"description\\" content=\\"description\\" />
    <title>
      title
    </title>
    <link rel=\\"preload\\" as=\\"style\\" href=\\"/static/css/common.css\\" />
    <link rel=\\"preload\\" as=\\"style\\" href=\\"/static/css/font.css\\" />
    <link rel=\\"shortcut icon\\" type=\\"image/x-icon\\" href=\\"/favicon.ico\\" />
    <style>
      
                .webp body {
                  background-image: url(/static/img/bg/type1.webp);
                }
                .no-webp body {
                  background-image: url(/static/img/bg/type1.jpg);
                }
                body {
                  background: #000 none no-repeat left bottom;
                  background-size: contain;
                  color: #FFF;
                  position: relative;
                  padding: 0;
                  margin: 0;
                  min-height: 100vh;
                  width: 100%;
                  min-width: 320px;
                }
                div.mr-item {
                  width: 200px;
                  top: 50%;
                  left: 50%;
                  position: absolute;
                  transform: translate(-50%, -50%);
                }
                footer {
                  font-size: 0.8rem;
                  bottom: 0px;
                  left: 0px;
                  margin: 10px;
                  position: absolute;
                  width: 320px;
                }
              
    </style>
  </Head>
</div>"
`;
